fix dark mode style

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -6,10 +6,6 @@ html {
   font-size: 16px;
 }
 
-body {
-  background-color: #fafafa;
-}
-
 .custom-block {
   border-left-width: .5rem;
   border-left-style: solid;
@@ -114,4 +110,7 @@ code {
 }
 .bg-primary {
   background-color: var(--theme-accent-color) !important;
+}
+.article-content .q-tab-panel div[class*="language-"] pre[class*="language-"] {
+  border-radius: unset;
 }
