--- a/docs/.vuepress/theme/styles/code.styl
+++ b/docs/.vuepress/theme/styles/code.styl
@@ -39,7 +39,6 @@
     line-height 1.5
     padding 1.25rem 1.5rem
     margin 0.85rem 0
-    border-radius 6px
     overflow auto
     code
       padding 0
@@ -65,9 +64,9 @@
         opacity: .2
         background-color var(--theme-highlight-02)
     pre, pre[class*="language-"]
-      background var(--theme-accent-color-005)
       position relative
       z-index 1
+      border-radius: 6px
       .code-copy
         right: .8em
     &::before
@@ -103,7 +102,7 @@
         width $lineNumbersWrapperWidth
         text-align center
         color var(--theme-highlight-03-085)
-        padding 1.25rem 0
+        padding 1.25rem 0 0 0
         line-height 1.5
         br
           user-select none
@@ -208,6 +207,7 @@
   pre[class*="language-"] {
     padding: 1em;
     margin: 0.5em 0;
+    margin-bottom: 0;
     overflow: auto;
   }
 
